style: 💄 fix csp range alignment

--- a/src/CspComparisonDemo.scss
+++ b/src/CspComparisonDemo.scss
@@ -153,8 +153,12 @@
                     #sfc-header {
                         grid-column: 5 / 7;
                         align-self: center;
-                        grid-row: 3 / 4;
                         margin-top: 0;
+                        padding: 0;
+                    }
+
+                    .min-sfc-label {
+                        grid-row: 2;
                     }
 
                     span.max-sfc-label, span.min-sfc-label {
